[Brandon] Update About Us Page
- Added "Our Teams" Section
- Adjusted colors and layouts

--- a/Brandon Git/about-us.html
+++ b/Brandon Git/about-us.html
@@ -24,7 +24,7 @@
     <!-- Hero Banner -->
     <section class="hero-banner container-fluid">
         <div class="row h-100 justify-content-end align-items-center">
-            <div class="col-6 h-100 position-relative d-flex flex-column justify-content-center" style="background-color: #41b188df; backdrop-filter: blur(5px);">
+            <div class="col-6 h-100 position-relative d-flex flex-column justify-content-center" style="background-color: #41b188ec; backdrop-filter: blur(5px);">
                 <div class="container w-100 px-5">
                     <h1 style="font-family: 'Playfair Display', serif; text-transform: uppercase; font-size: 2rem;">
                         We are
@@ -33,8 +33,11 @@
                         Auro<span style="letter-spacing: 5px;">ra</span> Medical
                     </h1>
                     <p style="font-family: 'Noto Sans', sans-serif;" class="pt-4">
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore iure aliquid ipsum consequuntur, ut neque enim dolores tempora ab expedita delectus id alias totam provident, explicabo assumenda excepturi iusto voluptatem?
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore iure aliquid ipsum consequuntur, ut neque enim dolores tempora ab expedita delectus id alias totam provident, explicabo assumenda excepturi iusto voluptatem? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore iure aliquid ipsum consequuntur, ut neque enim dolores tempora ab expedita delectus id alias totam provident, explicabo assumenda excepturi iusto voluptatem?
                     </p>
+                    <button class="button mt-5">
+                        Contact Us
+                    </button>
                 </div>
             </div>
         </div>
@@ -62,7 +65,7 @@
     <!-- Target Customers Section -->
     <section class="our-customers container-fluid">
         <div class="row h-100 justify-content-end align-items-center">
-            <div class="col-6 h-100 position-relative d-flex flex-column justify-content-center" style="background-color: #41b188df; backdrop-filter: blur(5px);">
+            <div class="col-6 h-100 position-relative d-flex flex-column justify-content-center" style="background-color: #112f24ee;; backdrop-filter: blur(5px);">
                 <div class="container w-100 px-5">
                     <h1 style="font-family: 'Playfair Display', serif; text-transform: uppercase; font-size: 2rem;">
                         We
@@ -74,6 +77,46 @@
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore iure aliquid ipsum consequuntur, ut neque enim dolores tempora ab expedita delectus id alias totam provident, explicabo assumenda excepturi iusto voluptatem? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facilis iusto autem, corrupti corporis doloribus atque, et nobis suscipit incidunt vero reprehenderit possimus sapiente eius inventore eaque delectus deleniti? Cupiditate, consequuntur.
                     </p>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Teams Section -->
+    <section class="our-team container-fluid">
+        <h1 style="font-family: 'Playfair Display', serif; text-transform: uppercase; font-size: 4rem;" class="text-center">
+            Our Team
+        </h1>
+        <hr style="width: 50px; color: white; opacity: 1; border-top: 1.5px solid;" class="mx-auto">
+        <p style="width: 50%; text-align: justify;" class="mx-auto">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit dolorem illo, quas enim aliquam atque! Aperiam, ea in atque, similique asperiores aspernatur praesentium quod sunt aut inventore voluptates odit fuga? Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus ipsa, repellendus qui vel laudantium eveniet distinctio aliquid rem unde dolorem obcaecati reprehenderit nihil delectus dignissimos atque numquam aperiam eius sed! Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores magni aperiam nostrum esse hic! Nulla, aliquid voluptatem dolore est repellendus, blanditiis doloremque id voluptate quo iste numquam maxime placeat qui!
+        </p>
+        <div class="row w-75 mx-auto" style="margin-top: 2rem">
+            <div class="col-lg-4 col-md-12 py-5">
+                <div class="image-wrapper mx-auto" style="background-color: white; height: 200px; width: 200px; border-radius: 100px"></div>
+                <h2 class="text-center my-5" style="color: white; font-family: 'Noto Sans', sans-serif; font-size: 2rem; font-weight: bold">
+                    Executives
+                </h2>
+                <button class="button mx-auto my-2 d-block">
+                    Learn More
+                </button>
+            </div>
+            <div class="col-lg-4 col-md-12 py-5">
+                <div class="image-wrapper mx-auto" style="background-color: white; height: 200px; width: 200px; border-radius: 100px"></div>
+                <h2 class="text-center my-5" style="color: white; font-family: 'Noto Sans', sans-serif; font-size: 2rem; font-weight: bold">
+                    Research Team
+                </h2>
+                <button class="button mx-auto my-2 d-block">
+                    Learn More
+                </button>
+            </div>
+            <div class="col-lg-4 col-md-12 py-5">
+                <div class="image-wrapper mx-auto" style="background-color: white; height: 200px; width: 200px; border-radius: 100px"></div>
+                <h2 class="text-center my-5" style="color: white; font-family: 'Noto Sans', sans-serif; font-size: 2rem; font-weight: bold">
+                    Directors
+                </h2>
+                <button class="button mx-auto my-2 d-block">
+                    Learn More
+                </button>
             </div>
         </div>
     </section>
