--- a/Ricardo/blog.html
+++ b/Ricardo/blog.html
@@ -27,6 +27,11 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto+Serif:ital,opsz,wght@0,8..144,500;1,8..144,100&display=swap"
+        rel="stylesheet">
 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -73,7 +78,7 @@
         </div>
     </div>
 
-
+    <!-- News Letter -->
     <div class="text_container">
         <div class="row justify-content-start">
             <div class="col-9 text-area-left">
@@ -99,6 +104,41 @@
             </div>
         </div>
     </div>
+
+    <!-- News Boxes -->
+    <div class="news_box_group">
+        <div class="col-9 area_major">
+            <div class="col-9 text_area_major">
+                <p class="title">test_major</p>
+                <p class="content">Nemo enim ipsam voluptatem quia voluptas sit asp</p>
+            </div>
+        </div>
+        <div class="col-3 area_sub">
+            <div class="col-3 text_area_sub">
+                <p class="title">text_area_sub</p>
+                <p class="content" style='font-size: 1.2vw'>Nemo enim ipsam voluptatem quia voluptas sit asp</p>
+            </div>
+        </div>
+        <div class="col-3 area_sub">
+            <div class="col-3 text_area_sub">
+                <p class="title">text_area_sub</p>
+                <p class="content" style='font-size: 1.2vw'>Nemo enim ipsam voluptatem quia voluptas sit asp</p>
+            </div>
+        </div>
+        <div class="col-3 area_sub">
+            <div class="col-3 text_area_sub">
+                <p class="title">text_area_sub</p>
+                <p class="content" style='font-size: 1.2vw'>Nemo enim ipsam voluptatem quia voluptas sit asp</p>
+            </div>
+        </div>
+        <div class="col-3 area_sub">
+            <div class="col-3 text_area_sub">
+                <p class="title">text_area_sub</p>
+                <p class="content" style='font-size: 1.2vw'>Nemo enim ipsam voluptatem quia voluptas sit asp</p>
+            </div>
+        </div>
+    </div>
+
 
 
 </body>
