[Brandon] Updated 'About Us' Page
Added responsive scripts

--- a/Brandon Git/about-us.html
+++ b/Brandon Git/about-us.html
@@ -18,21 +18,42 @@
     <title>About Us</title>
 </head>
 <body>
-    <!-- Bootstrap: JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-</body>
+    <!-- navbar -->
+    <div id="fixedheader" class="row header">
+        <div class="col-3 navbox"><a href="home.html" class="logo">Aurora Medical</a></div>
+        <div class="col-3"></div>
+        <div class="col navbox "><a href="#" class="navbtn hover-underline-animation">Products</a></div>
+        <div class="col navbox"><a href="#" class="navbtn hover-underline-animation">FAQ</a></div>
+        <div class="col navbox"><a href="#" class="navbtn hover-underline-animation">Contact Us</a></div>
+        <div class="col navbox"><a href="#" class="navbtn hover-underline-animation">News</a></div>
+        <div class="col navbox"><a href="#"><button href="#" class="bookbtn">Book Now</button></a></div>
+
+    </div>
+
+    <!--This is a duplicate header to create the spacing between the top of the screen and the next element, leave it as part of the header-->
+    <div class="row header">
+        <div class="col-3 navbox"><a href="home.html" class="logo">Aurora Medical</a></div>
+        <div class="col-2"></div>
+        <div class="col navbox "><a href="#" class="navbtn hover-underline-animation">Products</a></div>
+        <div class="col navbox"><a href="#" class="navbtn hover-underline-animation">FAQ</a></div>
+        <div class="col navbox"><a href="#" class="navbtn hover-underline-animation">Contact Us</a></div>
+        <div class="col navbox"><a href="#" class="navbtn hover-underline-animation">News</a></div>
+        <div class="col navbox"><a href="#"><button href="#" class="bookbtn">Book Now</button></a></div>
+        <div class="col"></div>
+    </div>
+
     <!-- Hero Banner -->
     <section class="hero-banner container-fluid">
         <div class="row h-100 justify-content-end align-items-center">
-            <div class="col-6 h-100 position-relative d-flex flex-column justify-content-center" style="background-color: #41b188ec; backdrop-filter: blur(5px);">
+            <div class="col-8 h-100 position-relative d-flex flex-column justify-content-center" style="background-color: #41b188fb; backdrop-filter: blur(5px);">
                 <div class="container w-100 px-5">
-                    <h1 style="font-family: 'Playfair Display', serif; text-transform: uppercase; font-size: 2rem;">
+                    <h1 style="text-transform: uppercase; font-size: 2rem;">
                         We are
                     </h1>
-                    <h1 style="font-family: 'Playfair Display', serif; text-transform: uppercase; font-size: 4rem; line-height: 2.5rem;">
+                    <h1 style="text-transform: uppercase; font-size: 4rem; line-height: 2.5rem;">
                         Auro<span style="letter-spacing: 5px;">ra</span> Medical
                     </h1>
-                    <p style="font-family: 'Noto Sans', sans-serif;" class="pt-4">
+                    <p class="pt-4">
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore iure aliquid ipsum consequuntur, ut neque enim dolores tempora ab expedita delectus id alias totam provident, explicabo assumenda excepturi iusto voluptatem? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore iure aliquid ipsum consequuntur, ut neque enim dolores tempora ab expedita delectus id alias totam provident, explicabo assumenda excepturi iusto voluptatem?
                     </p>
                     <button class="button mt-5">
@@ -46,15 +67,15 @@
     <!-- Motivation Section -->
     <section class="motivation-section container-fluid position-relative">
         <div class="row h-100 justify-content-start align-items-center">
-            <div class="col-6 h-100 position-relative d-flex flex-column justify-content-center" style="background-color: #febc60db; backdrop-filter: blur(5px);">
+            <div class="col-6 h-100 position-relative d-flex flex-column justify-content-center" style="background-color: #febc60f2; backdrop-filter: blur(10px);">
                 <div class="container w-100 px-5">
-                    <h1 style="font-family: 'Playfair Display', serif; text-transform: uppercase; font-size: 2rem;">
+                    <h1 style="text-transform: uppercase; font-size: 2rem;">
                         Our
                     </h1>
-                    <h1 style="font-family: 'Playfair Display', serif; text-transform: uppercase; font-size: 4rem; line-height: 2.5rem;">
+                    <h1 style="text-transform: uppercase; font-size: 4rem; line-height: 2.5rem;">
                         Motivation
                     </h1>
-                    <p style="font-family: 'Noto Sans', sans-serif;" class="pt-4">
+                    <p class="pt-4">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum venenatis leo vitae sagittis tincidunt. Duis orci dui, tristique ullamcorper maximus non, tincidunt ornare mauris. Curabitur nulla ex, dictum at purus vel, luctus dignissim urna. Donec tempor massa lacinia mauris luctus elementum. Praesent faucibus pulvinar rutrum. Suspendisse sed iaculis est, eget gravida velit. Donec ac libero consectetur lectus vulputate vulputate sed vitae massa. Phasellus ornare quam facilisis est interdum efficitur. Duis enim sapien, consectetur vel rhoncus a, sollicitudin vitae elit. Sed faucibus leo ut eros vehicula, sit amet gravida lorem consectetur. Vestibulum tristique venenatis purus, a fringilla ante tincidunt eget. Nullam dignissim diam eget purus gravida egestas. Vestibulum neque ipsum, imperdiet in dignissim sed, gravida ut purus. In pellentesque quam gravida, rhoncus diam in, faucibus nisi.
                     </p>
                 </div>
@@ -65,15 +86,15 @@
     <!-- Target Customers Section -->
     <section class="our-customers container-fluid">
         <div class="row h-100 justify-content-end align-items-center">
-            <div class="col-6 h-100 position-relative d-flex flex-column justify-content-center" style="background-color: #112f24ee;; backdrop-filter: blur(5px);">
+            <div class="col-6 h-100 position-relative d-flex flex-column justify-content-center" style="background-color: #112f24f4;; backdrop-filter: blur(10px);">
                 <div class="container w-100 px-5">
-                    <h1 style="font-family: 'Playfair Display', serif; text-transform: uppercase; font-size: 2rem;">
+                    <h1 style="text-transform: uppercase; font-size: 2rem;">
                         We
                     </h1>
-                    <h1 style="font-family: 'Playfair Display', serif; text-transform: uppercase; font-size: 4rem; line-height: 2.5rem;">
+                    <h1 style="text-transform: uppercase; font-size: 4rem; line-height: 2.5rem;">
                         Serve
                     </h1>
-                    <p style="font-family: 'Noto Sans', sans-serif;" class="pt-4">
+                    <p class="pt-4">
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore iure aliquid ipsum consequuntur, ut neque enim dolores tempora ab expedita delectus id alias totam provident, explicabo assumenda excepturi iusto voluptatem? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facilis iusto autem, corrupti corporis doloribus atque, et nobis suscipit incidunt vero reprehenderit possimus sapiente eius inventore eaque delectus deleniti? Cupiditate, consequuntur.
                     </p>
                 </div>
@@ -83,7 +104,7 @@
 
     <!-- Teams Section -->
     <section class="our-team container-fluid">
-        <h1 style="font-family: 'Playfair Display', serif; text-transform: uppercase; font-size: 4rem;" class="text-center">
+        <h1 style="text-transform: uppercase; font-size: 4rem;" class="text-center">
             Our Team
         </h1>
         <hr style="width: 50px; color: white; opacity: 1; border-top: 1.5px solid;" class="mx-auto">
@@ -93,7 +114,7 @@
         <div class="row w-75 mx-auto" style="margin-top: 2rem">
             <div class="col-lg-4 col-md-12 py-5">
                 <div class="image-wrapper mx-auto" style="background-color: white; height: 200px; width: 200px; border-radius: 100px"></div>
-                <h2 class="text-center my-5" style="color: white; font-family: 'Noto Sans', sans-serif; font-size: 2rem; font-weight: bold">
+                <h2 class="text-center my-5" style="color: white; font-size: 2rem; font-weight: bold">
                     Executives
                 </h2>
                 <button class="button mx-auto my-2 d-block">
@@ -102,7 +123,7 @@
             </div>
             <div class="col-lg-4 col-md-12 py-5">
                 <div class="image-wrapper mx-auto" style="background-color: white; height: 200px; width: 200px; border-radius: 100px"></div>
-                <h2 class="text-center my-5" style="color: white; font-family: 'Noto Sans', sans-serif; font-size: 2rem; font-weight: bold">
+                <h2 class="text-center my-5" style="color: white; font-size: 2rem; font-weight: bold">
                     Research Team
                 </h2>
                 <button class="button mx-auto my-2 d-block">
@@ -111,7 +132,7 @@
             </div>
             <div class="col-lg-4 col-md-12 py-5">
                 <div class="image-wrapper mx-auto" style="background-color: white; height: 200px; width: 200px; border-radius: 100px"></div>
-                <h2 class="text-center my-5" style="color: white; font-family: 'Noto Sans', sans-serif; font-size: 2rem; font-weight: bold">
+                <h2 class="text-center my-5" style="color: white; font-size: 2rem; font-weight: bold">
                     Directors
                 </h2>
                 <button class="button mx-auto my-2 d-block">
@@ -121,4 +142,65 @@
         </div>
     </section>
 
+    <!-- Achievements Section -->
+    <section class="achievements container-fluid">
+        <h1 style="text-transform: uppercase; font-size: 4rem;" class="text-center">
+            Our Achievements
+        </h1>
+        <hr style="width: 50px; color: #112F24; opacity: 1; border-top: 1.5px solid;" class="mx-auto">
+        <p style="width: 50%; text-align: justify;" class="mx-auto">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit dolorem illo, quas enim aliquam atque! Aperiam, ea in atque, similique asperiores aspernatur praesentium quod sunt aut inventore voluptates odit fuga? Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus ipsa, repellendus qui vel laudantium eveniet distinctio aliquid rem unde dolorem obcaecati reprehenderit nihil delectus dignissimos atque numquam aperiam eius sed! Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores magni aperiam nostrum esse hic! Nulla, aliquid voluptatem dolore est repellendus, blanditiis doloremque id voluptate quo iste numquam maxime placeat qui!
+        </p>
+        <div class="row w-75 mx-auto" style="margin-top: 2rem">
+            <div class="col-lg-4 col-md-12 py-5">
+                <div class="card mx-auto shadow" style="background-color: white; height: 25rem; width: 300px; border: none; border-radius: 0; padding: 2rem 0;">
+                    <div class="shadow mx-auto" style="width: 150px; height: 150px; border-radius: 75px;"></div>
+                    <h2 class="mt-4 text-center" style="color: #112F24;">
+                        Award Name
+                    </h2>
+                    <p class="text-center">2020</p>
+                    <p class="mx-3 text-center" style="font-weight: 300">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    </p>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-12 py-5">
+                <div class="card mx-auto shadow" style="background-color: white; height: 25rem; width: 300px; border: none; border-radius: 0; padding: 2rem 0;">
+                    <div class="shadow mx-auto" style="width: 150px; height: 150px; border-radius: 75px;"></div>
+                    <h2 class="mt-4 text-center" style="color: #112F24;">
+                        Award Name
+                    </h2>
+                    <p class="text-center">2020</p>
+                    <p class="mx-3 text-center" style="font-weight: 300">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    </p>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-12 py-5">
+                <div class="card mx-auto shadow" style="background-color: white; height: 25rem; width: 300px; border: none; border-radius: 0; padding: 2rem 0;">
+                    <div class="shadow mx-auto" style="width: 150px; height: 150px; border-radius: 75px;"></div>
+                    <h2 class="mt-4 text-center" style="color: #112F24;">
+                        Award Name
+                    </h2>
+                    <p class="text-center">2020</p>
+                    <p class="mx-3 text-center" style="font-weight: 300">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Bootstrap: JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+    <script>
+        const header = document.querySelector('#fixedheader');
+        const heroSection = document.querySelector('.hero-banner');
+
+        ['load', 'resize'].forEach((event) => {
+            window.addEventListener(event, (e) => {
+                heroSection.style.height = 'calc(100vh - ' + header.offsetHeight + 'px)';
+            })
+        })
+    </script>
+</body>
 </html>
