--- a/Brandon Git/contact-us.html
+++ b/Brandon Git/contact-us.html
@@ -13,10 +13,92 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <!-- stylesheet -->
+    <link rel="stylesheet" href="./contact-us-style.css">
     <title>Contact Us</title>
 </head>
 <body>
-    
+    <!-- Hero Banner -->
+    <section class="hero-banner container-fluid">
+        <div class="row h-100 justify-content-start align-items-center">
+            <div class="col-6 h-100 position-relative d-flex flex-column justify-content-center" style="background-color: #41b188;">
+                <div class="container w-100" style="padding: 0 20%">
+                    <h1 style="text-transform: uppercase; font-size: 4rem;">
+                        Contact Us
+                    </h1>
+                    <p class="pt-4">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore iure aliquid ipsum consequuntur, ut neque enim dolores tempora ab expedita delectus id alias totam provident, explicabo assumenda excepturi iusto voluptatem?
+                    </p>
+                    <button class="button mt-5">
+                        Drop a Message
+                    </button>
+                </div>
+            </div>
+            <div class="col-6 h-100 hero-banner-background"></div>
+        </div>
+    </section>
+
+    <!-- Quick Links Section -->
+    <section class="quick-links container-fluid">
+        <h1 style="text-transform: uppercase; font-size: 3rem;" class="text-center">
+            Need Help?
+        </h1>
+        <h1 class="text-center" style="font-size: 1.5rem">
+            Check out the helpers below
+        </h1> 
+        <div class="row w-100 mx-auto" style="margin-top: 3rem ">
+            <div class="col-lg-4 col-md-12 py-5">
+                <div class="card mx-auto shadow position-relative" style="background-color: white; height: 34rem; width: 80%; border: none; border-radius: 0; padding: 3rem 2rem;">
+                    <div class="shadow mx-auto" style="width: 150px; height: 150px; border-radius: 75px;">
+                        <img src="./quiz_FILL0_wght400_GRAD0_opsz48.svg" alt="">
+                    </div>
+                    <h2 class="mt-5 text-center">
+                        FAQ
+                    </h2>
+                    <p class="text-center" style="font-weight: 300">
+                        Find all frequently asked questions here
+                    </p>
+                    <button class="button mt-5 position-absolute" style="width: 6rem; left: 50%; bottom: 3rem; transform: translateX(-50%);">
+                        Check
+                    </button>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-12 py-5">
+                <div class="card mx-auto shadow position-relative" style="background-color: white; height: 34rem; width: 80%; border: none; border-radius: 0; padding: 3rem 2rem;">
+                    <div class="shadow mx-auto" style="width: 150px; height: 150px; border-radius: 75px;">
+                        <img src="./package_FILL0_wght400_GRAD0_opsz48.svg" alt="">
+                    </div>
+                    <h2 class="mt-5 text-center">
+                        Find Packages
+                    </h2>
+                    <p class="text-center" style="font-weight: 300">
+                        Find the best fit for you within clicks
+                    </p>
+                    <button class="button mt-5 position-absolute" style="width: 6rem; left: 50%; bottom: 3rem; transform: translateX(-50%);">
+                        Check
+                    </button>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-12 py-5">
+                <div class="card mx-auto shadow position-relative" style="background-color: white; height: 34rem; width: 80%; border: none; border-radius: 0; padding: 3rem 2rem;">
+                    <div class="shadow mx-auto" style="width: 150px; height: 150px; border-radius: 75px;">
+                        <img src="./info_FILL0_wght400_GRAD0_opsz48.svg" alt="">
+                    </div>
+                    <h2 class="mt-5 text-center">
+                        Border Info
+                    </h2>
+                    <p class="text-center" style="font-weight: 300">
+                        Get up-to-date regularion info of your destination
+                    </p>
+                    <button class="button mt-5 position-absolute" style="width: 6rem; left: 50%; bottom: 3rem; transform: translateX(-50%);">
+                        Check
+                    </button>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Contact Form Section -->
     <!-- Bootstrap: JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
