--- a/Marcel Git/mobile.html
+++ b/Marcel Git/mobile.html
@@ -177,7 +177,7 @@
 
 
         .hero {
-            background-image: url("image/sart.jpg");
+            background-image: url("image/bg.png");
             background-repeat: no-repeat;
             background-size: cover;
 
@@ -195,7 +195,7 @@
             font-family: 'Playfair Display', serif;
             font-size: 128px;
             transform: translateY(30%);
-            font-size: 8vw;
+            font-size: 7vw;
         }
 
         .herotext {
@@ -288,8 +288,9 @@
             background-color: #41B188;
             text-align: center;
             color: white;
-            padding-bottom: 2%;
+            padding-bottom: 5%;
         }
+
 
         .who {
             height: 10vw;
@@ -321,30 +322,23 @@
             margin-top: 5%;
         }
 
-        .carousel-item {
-            height: 70vw;
-            width: 100%;
-        }
-
-        .carousel-img {
-            object-fit: cover;
-        }
-        .col-6 {
-            align-items: center;
+        .plans {
+            border-style: solid;
+            border-radius: 15px;
             text-align: center;
-            vertical-align: middle;
+            justify-items: center;
+            height: 50vw;
+            padding: 10%;
         }
-        .steps3 {
-            padding-top: 30%;
-            padding-bottom: 30%;
+        h5 {
+            font-size: 2.8vw;
         }
-    
-        .steps3 h3 {
-            font-size: 2.5vw;
-            text-align: center;
+        h4 {
+            font-size: 3vw;
         }
-
-
+        .accordion-button {
+            font-size: 2vw;
+        }
     </style>
 </head>
 
@@ -372,128 +366,129 @@
         <div class="col"></div>
     </div>
     <div class="row hero text-center ">
-        <h1 class="herotitle">Supervised</h1>
-        <h1 class="herotitle">Antigen Rapid Test</h1>
+        <h1 class="herotitle">Mobile Pre-Departure</h1>
+        <h1 class="herotitle">COVID-19 Swab Test</h1>
+
     </div>
+
     </div>
     <div class="box1">
-        <h2 style="text-align: justify">What is a Supervised ART Test?</h2>
-        <a style="text-align: justify;">
-            A supervised ART test is a test conducted in your own home, under the supervision of our trained doctors, so
-            that you do not have to leave the comforts of your home to find out whether you are covid positive. Conduct
-            the test in the own confines of your home and receive creditation about the verity of your results as soon
-            as 15 minutes. A viable option for anyone who is feeling unwell or needs verifcation from your supervisors
-            or higher ups about your covid status.
-        </a>
-        <h2 style="text-align: justify">When to get a Supervised ART?</h2>
-        <a style="text-align: justify;">
-            If you are feeling unwell, you don’t need to travel to a Quick Test Centre (QTC) or clinic for testing. You
-            can choose to get tested via a supervised self-swab Covid-19 ART (Tele-ART) over video consultation with
-            Aurora Medical and receive the result within 2 hours.
-            <br>
-            <br>
-            Get a supervised self administered ART through video consultation wherever you are via Aurora Medical's
-            mobile app. Supervised-ART is approved for Pre Departure Test (for suitable destination country), Returning
-            residents to Singapore and before nightlife activities.
-        </a>
-        <div style="align-items: center; justify-content: center; display: flex; margin-top: 5%;">
-            <br>
-            <br>
+        <div class="row">
+            <div class="col-sm-8">
+                <h2 style="text-align: left">What is a Mobile Departure Swab Test?</h2>
+                <a style="text-align: justify;">
+                    Travelling somewhere soon? We offer mobile departure swab tests for those who are unable to travel down to any one of our branches. Just make sure to book at least 20 hours in advance for our normal mobile pre-departure swab tests, and at least 5 hours in advance for our express mobile departure swab tests.
+                    <br>
+                    <br>
+                    <a>Note: This service is only applicable for addresses in mainland Singapore and excludes Sentosa. All tests will be conducted in one appointment and location. This service does not include serology test and is not suitable for those travelling to countries which require IgM or anti-bodies tests.
+                    <br>
+                    <br>
+                    <h3>Test result will be available within 6 hours
+                        <br>
+                        <br>
+                        (Mobile Departure Swab tests only available from 8am-9pm 7 days of the week.).</h3>
+                </a>
+            </div>
+            <div class="col-sm-4" style="display:flex; align-items: center;">
+                <img src="image/mobile.jpg"
+                    style="object-fit: contain; height: auto; width: 150%; vertical-align: center;">
+            </div>
+        </div>
+        <div style=" align-items: center; justify-content: center; display: flex; margin-top: 5%;">
             <a href="booknow.html"><button href="#" class="bookbtn herobtn">Book Now</button></a>
         </div>
     </div>
     <div class="box2">
-        <h3 style="text-align:center; color:white; font-size: 2.8vw;"> Who's suitable to do a Supervised ART?</h3>
+        <h3 style="text-align:Left; color:white; font-size: 2.8vw;">Options</h3>
+        <br>
         <div class="row">
             <div class="col">
-                <img src="image/plane up.png" class="who">
-                <br>
-                <a></a><strong>Pre-Departure Testing</strong>
-                <br>
-                Applicable for on-arrival requirements of specific destination countries. Results valid for 24
-                hours; Check your destination country's test requirements.</a>
+                <div class="plans">
+                    <div class="row" style="height: 33%;">
+                        <h3 style="text-align: center; font-size: 4vw">Standard</h3>
+                        <hr>
+                    </div>
+                    <div class="row" style="height: 33%;">
+
+                        <h5>Book 20 hours in advance, for tomorrow!</h5>
+                    </div>
+                    <div class="row" style="height: 33%;">
+                        <hr>
+                        <h4>S$140</h4>
+                        <a href="booknow.html"><button href="#" class="bookbtn herobtn">Book Now</button></a>
+                    </div>
+                </div>
             </div>
             <div class="col">
-                <img src="image/plane down.png" class="who">
-                <br>
-                <a><strong>Inbound Travellers</strong>
-                    <br>
-                    Applicable for select groups of travellers trying to travel to Singapore. Available for Singapore
-                    Residents, Permanent Residents, and Work Pass Holders entering or transiting Singapore.
-                </a>
+                <div class="plans">
+                    <div class="row" style="height: 33%;">
+                        <h3 style="text-align: center; font-size: 4vw;">Express</h3>
+                        <hr>
+                    </div>
+                    <div class="row" style="height: 33%;">
+                        <h5>Book for 6 hours from now, minimum! </h5>
+                    </div>
+                    <div class="row" style="height: 33%;">
+                        <hr>
+                        <h4>S$230</h4>
+                        <a href="booknow.html"><button href="#" class="bookbtn herobtn">Book Now</button></a>
+                    </div>
+                </div>
             </div>
-        </div>
-        <div class="row second">
-            <a> Terms and Conditions Apply.
-                <br>
-                This service is only available for use in Singapore.
-            </a>
         </div>
     </div>
-    <div class="box1">
-        <h2 style="text-align: justify; margin-bottom: 5%; font-size:2.8vw;">How to book a Supervised ART?</h2>
-            <div class="row steps">
-                <div class="col-6">
-                    <div class="steps3">
-                        <h3>Step 1. Make a booking on our <a href="booknow.html">bookings page</a>!</h3>
-                        <a>Make sure your timeslot is entered correctly. </a>
-                    </div>
-                </div>
-                <div class="col-6">    
-                    <img src="image/booknow.png" style="height: 25vw; width: auto;">
-                </div>
+   <div class="box1">
+    <h3 style="font-size: 2.8vw;">Branches</h3>
+    <div class="accordion accordion-flush" id="accordionFlushExample">
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="flush-headingOne">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+              Mandai
+            </button>
+          </h2>
+          <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body">Mandai Ave 1234124<br>
+                Singapore 123124<br>
+                Contact: 123412
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.6194581434756!2d103.7884388500985!3d1.404612661783859!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31da13d91b72b4d3%3A0x900f5e4b86449d19!2s80%20Mandai%20Lake%20Rd%2C%20Singapore%20729826!5e0!3m2!1sen!2ssg!4v1665648782937!5m2!1sen!2ssg" width="100%" height="200vw" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
-            <div class="row steps">
-                <div class="col-6">
-                    <div class="steps3">
-
-                    <h3>Step 2. Download our <strong>Aurora Medical App</strong></h3>
-                        <a>Download our app from the app store or Google Play Store!</a>
-                    </div>
-                </div>
-                <div class="col-6">
-                    <img src="image/iphone.png" style="height: 25vw; width: auto;">
-                </div>
-            </div>
-            <div class="row steps">
-                <div class="col-6">
-                    <div class="steps3">
-
-                        <h3>Step 3. Prepare your ART test kit with the app on the day of the appointment</h3>
-                        <a>Ensure the items are already prepared for you, so as to minimize the delay in conducting the
-                            test.</a>
-                        </div>
-                    </div>
-                    <div class="col-6">
-                        <img src="image/sartkit.png" style="height: 25vw; width: auto;">
-                    </div>
-            </div>
-            <div class="row steps">
-                <div class="col-6">
-                    <div class="steps3">
-
-                        <h3>Step 4. Wait for the results to come back in less than 24 hours</h3>
-                    </div>
-                </div>
-                <div class="col-6">
-                    <img src="image/24hours.png" style="height: 20vw; width: auto; margin-top: 2%;">
-                </div>
-            </div>
-            <div class="row steps2">
-                <h3>Book a supervised ART now at:</h3>
-                <a href="booknow.html"><button href="#" class="bookbtn herobtn">Book Now</button></a>
-            </div>  
+          </div>
         </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="flush-headingTwo">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+              NTU
+            </button>
+          </h2>
+          <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body">NTU Ave 1239819283<br>
+                Contact: 123891283
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="flush-headingThree">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+              Jurong East
+            </button>
+          </h2>
+          <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
+          </div>
+        </div>
+      </div>
+    </div>
 
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-            crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-            integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
-            crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js"
-            integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk"
-            crossorigin="anonymous"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+        integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js"
+        integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
