--- a/Brandon Git/contact-us.html
+++ b/Brandon Git/contact-us.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- map -->
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -11,6 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <!-- stylesheet -->
@@ -98,8 +101,150 @@
         </div>
     </section>
 
+    <hr style="width: 80%; margin: auto">
+
     <!-- Contact Form Section -->
+    <section class="contact-form container-fluid">
+        <div class="row w-100 h-100">
+            <div class="col-4 d-flex flex-column justify-content-between pe-3">
+                <div class="text-heading">
+                    <h1 style="font-size: 1.5rem;">
+                        Wanna
+                    </h1>
+                    <h1 style="font-size: 2.5rem" class="mb-4">
+                        Drop us a message?
+                    </h1> 
+                    <p>
+                        <b> No Problem! </b> Simply tell us about your concern by filling up this simple form >
+                    </p>
+                </div>
+                <p>
+                    Wonder how your paticulars will be used? <br> Checkout our <b style="text-decoration: underline"> Privacy Policy </b>
+                </p>
+            </div>
+            <div class="col-8" style="padding: 3rem; background-color: #FEBB60;">
+                <form action="/">
+                    <div class="name mb-5">
+                        <h1 style="font-size: 1.25rem" class="mb-4">
+                            How shall we address you?
+                        </h1>
+                        <div class="row gy-4">
+                            <div class="col-lg-6 col-md-12">
+                                <p>
+                                    First Name
+                                </p>
+                                <input type="text" placeholder="Your First Name">
+                            </div>
+                            <div class="col-lg-6 col-md-12">
+                                <p>
+                                    Last Name
+                                </p>
+                                <input type="text" placeholder="Your Last Name">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="contact mb-5">
+                        <h1 style="font-size: 1.25rem" class="mb-4">
+                            How shall we reach out to you?
+                        </h1>
+                        <div class="row gy-4">
+                            <div class="col-lg-6 col-md-12">
+                                <p>
+                                    Mobile Number <span style="font-size: 0.75rem">(Optional)</span>
+                                </p>
+                                <input type="text" placeholder="E.g. +65 12345678">
+                            </div>
+                            <div class="col-lg-6 col-md-12">
+                                <p>
+                                    Email
+                                </p>
+                                <input type="text" placeholder="Example@example.com">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="contact mb-5">
+                        <h1 style="font-size: 1.25rem" class="mb-4">
+                            What we can help you with?
+                        </h1>
+                        <div class="row mb-4">
+                            <div class="col-12">
+                                <p>
+                                    Subject <span style="font-size: 0.75rem">- this will help us better classify and process your enquiry</span>
+                                </p>
+                                <input type="text">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-12">
+                                <p>
+                                    Message
+                                </p>
+                                <textarea name="contact message" cols="30" rows="100" style="width: 100%; height: 20rem; overflow-y: scroll;"></textarea>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </section>
+
+    <!-- contact info -->
+    <section class="contact-info container-fluid">
+        <div class="row">
+            <div class="col-lg-4 col-md-12" id="map" style="height: 40rem"></div>
+            <div class="col-lg-4 col-md-6 d-flex flex-column" style="background-color: #112F24; padding: 2rem 3rem; height: 40rem;">
+                <div style="flex: 2;" class="d-flex flex-column justify-content-center">
+                    <h1 style="font-size: 3rem; color: white; text-transform: uppercase;">
+                        Meet Us
+                    </h1>
+                </div>
+                <div style="flex: 1;" class="d-flex flex-column justify-content-center">
+                    <p style="color: white; font-size: 1.5rem;">
+                        <span class="material-symbols-outlined"> location_on </span> 20 McCallum Street #15-01/05 ASIA CHAMBERS
+                    </p>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6 d-flex flex-column" style="background-color: #EBFFF8; padding: 2rem 3rem; height: 40rem;">
+                <div style="flex: 2;" class="d-flex flex-column justify-content-center">
+                    <h1 style="font-size: 3rem; color: #112F24; text-transform: uppercase;">
+                        Ping Us
+                    </h1>
+                </div>
+                <div style="flex: 1;" class="d-flex flex-column justify-content-center">
+                    <p style="color: #112F24; font-size: 1.5rem;">
+                        <span class="material-symbols-outlined"> call </span> +65 8052 8564
+                    </p>
+                    <p style="color: #112F24; font-size: 1.5rem;">
+                        <span class="material-symbols-outlined"> mail </span> aurora@aurora.sg
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- Bootstrap: JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+    <!-- Google Map -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg&callback=initMap&v=weekly" defer></script>
+    <script>
+        // Initialize and add the map
+        function initMap() {
+        // The location of Uluru
+        const uluru = { lat: -25.344, lng: 131.031 };
+        // The map, centered at Uluru
+        const map = new google.maps.Map(document.getElementById("map"), {
+            zoom: 4,
+            center: uluru,
+        });
+        // The marker, positioned at Uluru
+        const marker = new google.maps.Marker({
+            position: uluru,
+            map: map,
+        });
+        }
+
+        window.initMap = initMap;
+    </script>
 </body>
 </html>
