Added some filler content thats not Lorem Ipsum to Aboutus.html and edited cart.html slightly

--- a/Brandon Git/about-us.html
+++ b/Brandon Git/about-us.html
@@ -53,7 +53,7 @@
                         Auro<span style="letter-spacing: 5px;">ra</span> Medical
                     </h1>
                     <p class="pt-4">
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore iure aliquid ipsum consequuntur, ut neque enim dolores tempora ab expedita delectus id alias totam provident, explicabo assumenda excepturi iusto voluptatem? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore iure aliquid ipsum consequuntur, ut neque enim dolores tempora ab expedita delectus id alias totam provident, explicabo assumenda excepturi iusto voluptatem?
+                        We are a leading medical company that is on the forefront of medical innovation. Rendering pivotal medical services during the most critical moments, we always put our clients first at the core of our healthcare ecosystem. We leverage and combine both innovation and technology to offer the most affordable and progressive medical services to our most honored clients. We have worked with dozens of businesses, coordinating large scale testing for specialized events, and a history of providing medical services to the most prestigious events in the world.
                     </p>
                     <button class="button mt-5">
                         Contact Us
@@ -66,7 +66,7 @@
     <!-- Motivation Section -->
     <section class="motivation-section container-fluid position-relative">
         <div class="row h-100 justify-content-start align-items-center">
-            <div class="col-6 h-100 position-relative d-flex flex-column justify-content-center" style="background-color: #f7fffcf4; backdrop-filter: blur(10px);">
+            <div class="col-6 h-100 position-relative d-flex flex-column justify-content-center" style="background-color: #febc60f2; backdrop-filter: blur(10px);">
                 <div class="container w-100 px-5">
                     <h1 style="text-transform: uppercase; font-size: 2rem;">
                         Our
@@ -75,7 +75,7 @@
                         Motivation
                     </h1>
                     <p class="pt-4">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum venenatis leo vitae sagittis tincidunt. Duis orci dui, tristique ullamcorper maximus non, tincidunt ornare mauris. Curabitur nulla ex, dictum at purus vel, luctus dignissim urna. Donec tempor massa lacinia mauris luctus elementum. Praesent faucibus pulvinar rutrum. Suspendisse sed iaculis est, eget gravida velit. Donec ac libero consectetur lectus vulputate vulputate sed vitae massa. Phasellus ornare quam facilisis est interdum efficitur. Duis enim sapien, consectetur vel rhoncus a, sollicitudin vitae elit. Sed faucibus leo ut eros vehicula, sit amet gravida lorem consectetur. Vestibulum tristique venenatis purus, a fringilla ante tincidunt eget. Nullam dignissim diam eget purus gravida egestas. Vestibulum neque ipsum, imperdiet in dignissim sed, gravida ut purus. In pellentesque quam gravida, rhoncus diam in, faucibus nisi.
+                        We always put our clients first, and offer our clients convenient access to affordable, comprehensive and preventive healthcare especially through the most critical times. By empowering our medical clients, we give our clients the autonomy over their body and health to maximize their health and wellbeing.
                     </p>
                 </div>
             </div>
@@ -85,7 +85,7 @@
     <!-- Target Customers Section -->
     <section class="our-customers container-fluid">
         <div class="row h-100 justify-content-end align-items-center">
-            <div class="col-6 h-100 position-relative d-flex flex-column justify-content-center" style="background-color: #f7fffcf4;; backdrop-filter: blur(10px);">
+            <div class="col-6 h-100 position-relative d-flex flex-column justify-content-center" style="background-color: #112f24f4;; backdrop-filter: blur(10px);">
                 <div class="container w-100 px-5">
                     <h1 style="text-transform: uppercase; font-size: 2rem;">
                         We
@@ -94,7 +94,7 @@
                         Serve
                     </h1>
                     <p class="pt-4">
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore iure aliquid ipsum consequuntur, ut neque enim dolores tempora ab expedita delectus id alias totam provident, explicabo assumenda excepturi iusto voluptatem? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facilis iusto autem, corrupti corporis doloribus atque, et nobis suscipit incidunt vero reprehenderit possimus sapiente eius inventore eaque delectus deleniti? Cupiditate, consequuntur.
+                        We serve all our clients with the highest sense of priority and trust, and we aim to provide and render the penultimate best of services to all our clients. By leveraging our innovative use of technology and capitalizing the forefront nature of our company, we are able to bring the most affordable prices to all of our clients while combining that with the best level of after-service.
                     </p>
                 </div>
             </div>
