--- a/Marcel Git/cart.html
+++ b/Marcel Git/cart.html
@@ -416,7 +416,7 @@
                             <option value="Beijing">Phillipines</option>
                         </select>
                         <label for="exampleFormControlInput1" class="form-label">Phone Number</label>
-                        <input class="form-control" type="text" placeholder="Default input"
+                        <input class="form-control" type="text" 
                             aria-label="default input example">
                         <div>
                         </div>
